--- a/app/App_Resources/iOS/en.lproj/Localizable.strings
+++ b/app/App_Resources/iOS/en.lproj/Localizable.strings
@@ -1,1 +1,7 @@
+"_login_otp_submit_Z1kznrO" = "Verify";
+"_login_otp_title_h2_1z8Npz" = "An authentication code has been sent to ";
+"_login_otp_title_h1_1z8Npy" = "OTP Verification";
+"_login_phone_send_2i99Ry" = "Send OTP";
+"_login_phone_hint_2i7IPG" = "Enter your phone number";
+"_login_title_h2_dnCbh" = "Enter your number to get an OTP";
 "_login_title_h1_dnCbg" = "Let’s sign you in";
